--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Install
       run: |
-        npm install
+        npm install --legacy-peer-deps
 
     - name: Build
       run: |
