--- a/package.json
+++ b/package.json
@@ -40,11 +40,7 @@
     ]
   },
   "devDependencies": {
-    "css-loader": "^6.8.1",
-    "file-loader": "^6.2.0",
-    "style-loader": "^3.3.3",
-    "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2",
-    "webpack-cli": "^5.1.4"
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "typescript": "^3.2.1"
   }
 }
